--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -58,23 +58,27 @@ suites:
     run_list:
       - recipe[cdap::fullstack]
       - recipe[cdap::security]
+      - recipe[cdap::web_app_init]
       - recipe[minitest-handler::default]
     attributes: { hadoop: { distribution: 'cdh', distribution_version: 4 } }
   - name: cdh5
     run_list:
       - recipe[cdap::fullstack]
       - recipe[cdap::security]
+      - recipe[cdap::web_app_init]
       - recipe[minitest-handler::default]
     attributes: { hadoop: { distribution: 'cdh', distribution_version: 5 } }
   - name: hdp20
     run_list:
       - recipe[cdap::fullstack]
       - recipe[cdap::security]
+      - recipe[cdap::web_app_init]
       - recipe[minitest-handler::default]
     attributes: { hadoop: { distribution: 'hdp', distribution_version: '2.0' } }
   - name: hdp21
     run_list:
       - recipe[cdap::fullstack]
       - recipe[cdap::security]
+      - recipe[cdap::web_app_init]
       - recipe[minitest-handler::default]
     attributes: { hadoop: { distribution: 'hdp', distribution_version: '2.1' } }
