--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
     <module>cdap-common-unit-test</module>
     <module>cdap-api</module>
     <module>cdap-common</module>
+    <module>cdap-common-tests</module>
     <module>cdap-watchdog-api</module>
     <module>cdap-kafka</module>
     <module>cdap-data-fabric</module>
