--- a/cdap-common-tests/pom.xml
+++ b/cdap-common-tests/pom.xml
@@ -21,12 +21,13 @@
   <parent>
     <artifactId>cdap</artifactId>
     <groupId>co.cask.cdap</groupId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.5.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>cdap-common-tests</artifactId>
   <name>CDAP Common Tests</name>
+  <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
