Cleaned up cdap-security and cdap-security-service poms

--- a/cdap-security-service/pom.xml
+++ b/cdap-security-service/pom.xml
@@ -51,10 +51,9 @@
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
-
     <dependency>
       <groupId>co.cask.cdap</groupId>
-      <artifactId>cdap-security</artifactId>
+      <artifactId>cdap-common-unit-test</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
