--- a/cdap-common/pom.xml
+++ b/cdap-common/pom.xml
@@ -140,6 +140,14 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-minicluster</artifactId>
     </dependency>
+    <dependency>
+      <groupId>co.cask.common</groupId>
+      <artifactId>common-http</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>co.cask.common</groupId>
+      <artifactId>common-io</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
