--- a/pom.xml
+++ b/pom.xml
@@ -133,9 +133,10 @@
     <unboundid.version>2.3.6</unboundid.version>
     <zookeeper.version>3.4.5</zookeeper.version>
     <spark.version>1.1.0</spark.version>
-    <cdap.client.version>1.0.1</cdap.client.version>
+    <cdap.client.version>1.1.0-SNAPSHOT</cdap.client.version>
     <cask.packages.snapshot.repo>http://cask.invalid.snapshot.repo.co</cask.packages.snapshot.repo>
     <cask.packages.release.repo>http://cask.invalid.release.repo.co</cask.packages.release.repo>
+    <cask.common.version>0.1.0-SNAPSHOT</cask.common.version>
   </properties>
 
   <modules>
@@ -1192,6 +1193,16 @@
         <groupId>co.cask.cdap</groupId>
         <artifactId>cdap-authentication-client</artifactId>
         <version>${cdap.client.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>co.cask.common</groupId>
+        <artifactId>common-http</artifactId>
+        <version>${cask.common.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>co.cask.common</groupId>
+        <artifactId>common-io</artifactId>
+        <version>${cask.common.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
