--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
 
     "angular-ui-router": "0.2.12-pre1",
     "angular-loading-bar": "0.6.0",
-    "ngstorage": "0.3.0"
+    "ngstorage": "0.3.0",
+
+    "cask-angular-capitalize": "https://github.com/caskdata/ng-capsules/blob/master/zip/cask-angular-capitalize.zip?raw=true"
   }
 }
