Make CLI use ExploreClient to submit SQL queries to CDAP

--- a/cdap-client/pom.xml
+++ b/cdap-client/pom.xml
@@ -107,6 +107,17 @@
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-authentication-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>cdap-explore-client</artifactId>
+      <version>${project.version}</version>
+      <!-- TODO do we need all the exclusions like for cdap-common? -->
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.netty</groupId>
+      <artifactId>netty</artifactId>
+      <version>3.2.7.Final</version>
+    </dependency>
   </dependencies>
 
 </project>
