--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,23 @@
   "name": "cdap-ui",
   "private": true,
   "dependencies": {
-    "angular": "1.3.1",
-    "angular-animate": "1.3.1",
-    "angular-sanitize": "1.3.1",
-    "angular-resource": "1.3.1",
-    "angular-mocks": "1.3.1",
-
+    "angular": "1.3.2",
+    "angular-animate": "1.3.2",
+    "angular-sanitize": "1.3.2",
+    "angular-resource": "1.3.2",
+    "angular-mocks": "1.3.2",
     "bootstrap": "3.3.0",
     "font-awesome": "4.2.0",
     "angular-strap": "2.1.2",
-
     "angular-ui-router": "0.2.12-pre1",
     "angular-loading-bar": "0.6.0",
     "ngstorage": "0.3.0",
-
     "cask-angular-capitalize": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-capitalize.zip?raw=true",
-    "cask-angular-theme": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-theme.zip?raw=true"
+    "cask-angular-theme": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-theme.zip?raw=true",
+    "angular-sockjs": "~0.0.1",
+    "sockjs-client": "~0.3.4"
+  },
+  "resolutions": {
+    "angular": "1.3.2"
   }
 }
