--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "test": "node ./node_modules/karma/bin/karma start test/karma-conf.js",
     "test-single-run": "node ./node_modules/karma/bin/karma start test/karma-conf.js --no-auto-watch --single-run"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/caskdata/cdap-ui"
+  },
   "devDependencies": {
     "bower": "^1.3.10",
     "del": "^0.1.3",
@@ -23,7 +27,7 @@
     "gulp-minify-css": "^0.3.8",
     "gulp-ng-annotate": "^0.3.0",
     "gulp-plumber": "^0.6.4",
-    "gulp-replace": "^0.4.0",
+    "gulp-replace": "^0.5.0",
     "gulp-rev": "^2.0.1",
     "gulp-size": "^1.0.0",
     "gulp-uglify": "^1.0.1",
@@ -31,7 +35,7 @@
     "gulp-wrapper": "^0.1.5",
     "karma": "^0.12.21",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.1.5",
+    "karma-jasmine": "^0.2.3",
     "main-bower-files": "^2.1.0",
     "merge-stream": "^0.1.5"
   },
