--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.9.7",
     "finalhandler": "^0.3.0",
     "morgan": "^1.3.1",
+    "object-hash": "^0.3.0",
     "serve-favicon": "^2.1.5",
     "sockjs": "^0.3.10"
   }
