--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "merge-stream": "^0.1.5"
   },
   "dependencies": {
+    "colors": "^1.0.3",
     "express": "^4.9.7",
     "finalhandler": "^0.3.0",
     "morgan": "^1.3.1",
     "object-hash": "^0.3.0",
+    "request": "^2.47.0",
     "serve-favicon": "^2.1.5",
     "sockjs": "^0.3.10"
   }
