--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "colors": "^1.0.3",
     "express": "^4.9.7",
     "finalhandler": "^0.3.0",
+    "lodash": "^2.4.1",
     "morgan": "^1.3.1",
     "object-hash": "^0.3.0",
     "request": "^2.47.0",
