--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
     "angular-sanitize": "1.3.2",
     "angular-resource": "1.3.2",
     "angular-mocks": "1.3.2",
-    "bootstrap": "3.3.0",
+    "bootstrap": "3.3.1",
     "font-awesome": "4.2.0",
-    "angular-strap": "2.1.2",
-    "angular-ui-router": "0.2.12-pre1",
+    "angular-strap": "2.1.3",
+    "angular-ui-router": "0.2.12",
     "angular-loading-bar": "0.6.0",
     "ngstorage": "0.3.0",
     "cask-angular-capitalize": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-capitalize.zip?raw=true",
