--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "del": "^0.1.3",
     "gulp": "^3.8.9",
     "gulp-angular-templatecache": "^1.3.0",
-    "gulp-autoprefixer": "^1.0.0",
+    "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.3.4",
     "gulp-if": "^1.2.4",
     "gulp-jshint": "^1.8.4",
@@ -33,9 +33,10 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.0",
     "gulp-wrapper": "^0.1.5",
+    "jasmine-core": "^2.1.2",
     "karma": "^0.12.21",
     "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "^0.2.3",
+    "karma-jasmine": "^0.3.0",
     "main-bower-files": "^2.1.0",
     "merge-stream": "^0.1.5"
   },
