add an example that runs wordcount over file datasets

--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -31,6 +31,7 @@
 
   <modules>
     <module>CountRandom</module>
+    <module>FileExample</module>
     <module>HelloWorld</module>
     <module>Purchase</module>
     <module>WordCount</module>
