--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -31,7 +31,7 @@
 
   <modules>
     <module>CountRandom</module>
-    <module>FileExample</module>
+    <module>FileSetExample</module>
     <module>HelloWorld</module>
     <module>Purchase</module>
     <module>WordCount</module>
