--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>co.cask.cdap</groupId>
     <artifactId>cdap</artifactId>
-    <version>2.6.0-SNAPSHOT</version>
+    <version>2.7.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>cdap-web-app</artifactId>
@@ -64,6 +64,7 @@
             <excludes>
               <exclude>test</exclude>
               <exclude>.gitignore</exclude>
+              <exclude>.gitmodules</exclude>
               <exclude>.travis.yml</exclude>
               <exclude>*.iml</exclude>
               <exclude>README.md</exclude>
