further merging of branch

--- a/package.json
+++ b/package.json
@@ -56,8 +56,8 @@
     "request": "^2.47.0",
     "serve-favicon": "^2.1.5",
     "sockjs": "^0.3.10",
-    "q": "~1.1.2",
-    "xml2js": "~0.4.4",
-    "body-parser": "~1.9.3"
+    "q": "^1.1.2",
+    "xml2js": "^0.4.4",
+    "body-parser": "^1.9.3"
   }
 }
