--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "sockjs-client": "~0.3.4",
     "d3": "~3.4.13",
     "epoch": "~0.6.0",
-    "ng-sortable": "~1.1.7"
+    "ng-sortable": "~1.1.7",
+    "angular-breadcrumb": "0.3.2"
   },
   "resolutions": {
     "angular": "1.3.5"
