--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
     "bootstrap": "3.3.1",
     "font-awesome": "4.2.0",
     "angular-strap": "2.1.4",
-    "angular-ui-router": "0.2.12",
+    "angular-ui-router": "0.2.13",
     "angular-loading-bar": "0.6.0",
     "ngstorage": "0.3.0",
     "cask-angular-capitalize": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-capitalize.zip?raw=true",
@@ -18,7 +18,8 @@
     "cask-angular-window-manager": "https://github.com/caskdata/ng-capsules/blob/develop/zip/cask-angular-window-manager.zip?raw=true",
     "sockjs-client": "~0.3.4",
     "d3": "~3.4.13",
-    "epoch": "~0.6.0"
+    "epoch": "~0.6.0",
+    "ng-sortable": "~1.1.7"
   },
   "resolutions": {
     "angular": "1.3.5"
