--- a/cdap-examples/Purchase/pom.xml
+++ b/cdap-examples/Purchase/pom.xml
@@ -50,5 +50,10 @@
       <groupId>co.cask.http</groupId>
       <artifactId>netty-http</artifactId>
     </dependency>
+    <dependency>
+      <groupId>co.cask.cdap</groupId>
+      <artifactId>cdap-common</artifactId>
+      <version>2.6.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
