--- a/cdap-examples/Purchase/pom.xml
+++ b/cdap-examples/Purchase/pom.xml
@@ -31,6 +31,7 @@
 
   <properties>
     <app.main.class>co.cask.cdap.examples.purchase.PurchaseApp</app.main.class>
+    <cdap.version>2.6.0-SNAPSHOT</cdap.version>
   </properties>
 
   <dependencies>
@@ -53,7 +54,7 @@
     <dependency>
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-common</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>${cdap.version}</version>
     </dependency>
   </dependencies>
 </project>
