--- a/cdap-examples/pom.xml
+++ b/cdap-examples/pom.xml
@@ -177,10 +177,9 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-        <groupId>co.cask.cdap</groupId>
-        <artifactId>cdap-common</artifactId>
-        <version>${project.version}</version>
-        <scope>provided</scope>
+        <groupId>co.cask.common</groupId>
+        <artifactId>common-http</artifactId>
+        <version>${cask.common.version}</version>
       </dependency>
       <dependency>
         <groupId>co.cask.http</groupId>
